NO-ISSUE: remove overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+html {
   overflow-x: hidden;
 }
 
